--- a/src/css/invoiceSummary.css
+++ b/src/css/invoiceSummary.css
@@ -3702,13 +3702,21 @@
 }
 
 .invoice-view th {
-  background-color: var(--primary-light);
-  color: var(--primary);
+  background-color: var(--bs-primary);
+  color: white;
+  font-weight: 500;
+  padding: 1rem;
   text-align: left;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 0.68rem;
-  letter-spacing: 0.05em;
+  border: 1px solid var(--bs-primary-dark);
+  border-radius: 0;
+}
+
+.invoice-view th:first-child {
+  border-top-left-radius: 0;
+}
+
+.invoice-view th:last-child {
+  border-top-right-radius: 0;
 }
 
 .invoice-view .section-title {
